feat(ex2): add alls exercices and solution

--- a/src/__tests__/exercices/1.md
+++ b/src/__tests__/exercices/1.md
@@ -89,7 +89,24 @@ function render(Component: ReactNode) {
 Ainsi qu'une fonction `click` pour simplifé le code et éviter de `wait(1)` partout !
 
 ```js
-function click(div: HTMLElement, selector: string) {
+function click(element: HTMLElement) {
+  // ...
+}
+```
+
+Et on ne vas pas utiliser `element.click` pour faire notre action, on va plutôt
+créer un MouseEvent avec les bons paramètres afin que notre click soit "comm" un vrai
+click fait pas un utilisateur.
+
+```js
+function click(element: HTMLElement) {
+  const event = new MouseEvent('click', {
+    bubbles: true,
+    cancelable: true,
+    view: window,
+  });
+
+  element.dispatchEvent(event);
   // ...
 }
 ```
