feat(ex 3 and 4): add exercices

--- a/src/__tests__/exercices/1.md
+++ b/src/__tests__/exercices/1.md
@@ -1,7 +1,7 @@
 # Les tests sans React-testing-library
 
-Pour bien comprendre les tests, je te propose de les découvrir SANS utiliser la
-librairie React-testing-library. C'est un peu plus compliqué, mais ça permet de
+Pour bien comprendre les tests, je te propose de les découvrir SANS utiliser
+la librairie React-testing-library. C'est un peu plus compliqué, mais ça permet de
 comprendre comment l'utilité de cette librairie.
 
 Dans le premier exercice on va tester le composant `Counter` que tu peux retrouver dans
