--- a/src/__tests__/exercices/2.md
+++ b/src/__tests__/exercices/2.md
@@ -1,13 +1,12 @@
 # Utilisation de react-testing-library
 
-On va recréer nos tests qu'on à fait avant en utilisant la library `react-testing-library`.
+On va recréer nos tests qu'on a fait avant en utilisant la library `react-testing-library`.
 
 Cette librairie va gérer tout ce qui touche aux render et à la récupération des éléments.
 
-Récupérer des éléments avec `div.querySelector` est une mauvaise pratique car on ne sait pas si l'élément
-réelement visible, ou si il a les bons attributs.
+Récupérer des éléments avec div.querySelector est une mauvaise pratique car on ne sait pas si l'élément est vraiment visible, ou s'il a les bons attributs.
 
-On va préférer récupérer les éléments en fonciton de leur text et leur rôle, pour ne
+On va préférer récupérer les éléments en fonction de leur texte et de leur rôle, pour ne
 pas dépendre de l'implémentation dans le DOM.
 
 Mais on va faire ceci **étape par étape**.
@@ -16,8 +15,7 @@ Mais on va faire ceci **étape par étape**.
 
 Créer le test du clique sur `minus` en utilisant `react-testing-library`.
 
-Ce qui va changé c'est que tu vas utilisé la fonction `render` qui va te retourner
-`container`, elle corresponds à la div qui contient ton composant.
+Ce qui va changé c'est que tu vas utiliser la fonction `render` qui va te retourner `container`, elle correspond à la div qui contient ton composant.
 
 ```js
 import { render } from 'react-testing-library';
@@ -33,7 +31,7 @@ avant avec `div.querySelector`.
 
 ## Partie 2
 
-Maintenant on va utiliser les fonctions utilitaire de `react-testing-library` pour
+Maintenant, on va utiliser les fonctions utilitaires de `react-testing-library` pour
 récupérer nos éléments.
 
 Afin de récupérer l'élément `plus` on va pouvoir utiliser `screen.getByRole('button', { name: '+' })`.
@@ -48,7 +46,7 @@ Dans la vidéo solution, je vais t'expliquer ce que fais `screen` ainsi que `get
 Tu peux aussi utiliser [screen.debug()](https://testing-library.com/docs/react-testing-library/api#debug) afin
 d'afficher ce qui se passe dans le dom !
 
-Tu remerqueras qu'on à aussi accès à de nouvelle assertion offert par la librairie [`@testing-library/jest-dom`](`@testing-library/jest-dom/matchers`) !
+Tu remarqueras qu'on a aussi accès à de nouvelles assertions offertes par la librairie [`@testing-library/jest-dom`](`@testing-library/jest-dom/matchers`) !
 
 - [`expect(element).toBeInTheDocument()`](https://github.com/testing-library/jest-dom#tobeinthedocument)
 - [`expect(element).toHaveTextContent()`](https://github.com/testing-library/jest-dom#tohavetextcontent)
