--- a/src/__tests__/exercices/1.md
+++ b/src/__tests__/exercices/1.md
@@ -131,7 +131,7 @@ appelé lorsque qu'on modifie la valeur du compteur.
 On va donc créer un test qui va vérifier que cette props est bien appelé avec la bonne
 valeurs.
 
-Pour ça on va utilisé un "mock" de vite : `vi.fn()`.
+Pour ça on va utilisé un `mock` de vite : `vi.fn()`.
 
 Ce hooks va enregistrer les arguments avec lequel il est appelé ainsi que le nombre
 de fois qu'il est appelé.
