--- a/src/__tests__/exercices/3.md
+++ b/src/__tests__/exercices/3.md
@@ -47,7 +47,7 @@ Cette erreur sera affiché sur `username` fait moins de 3 caractères.
 
 J'ai utilisé un pattern intéressant pour cette fonction `onSubmit` passé en paramètre.
 
-En utilisan la puissance des promises, je peux faire en sorte que le composant Parent
+En utilisant la puissance des promises, je peux faire en sorte que le composant Parent
 à mon `onSubmit` puisse renvoyer des erreurs qui seront affiché à l'intérieur du composant.
 
 Tu peux utiliser notre mock pour reject la promise, et vérifier que l'erreur envoyé est bien
@@ -57,7 +57,7 @@ affiché dans le composant.
 
 Notre test commence à être très long non ?
 
-Je te propore de créer une fonction qui va gérer la majorités du setup de notre test :
+Je te propre de créer une fonction qui va gérer la majorités du setup de notre test :
 
 - render le composant
 - remplir les inputs
@@ -71,7 +71,7 @@ Si il y a un username, utilise le sinon tu peux utiliser faker.
 Refactor chaque test en utilisant notre fonction.
 
 Ensuite créer un 4 ème test qui va vérifier que si notre promise est reject mais que
-elle n'envoit pas un objet `{ message: "Some string" }` alors par défaut on affiche
+elle n’envoie pas un objet `{ message: "Some string" }` alors par défaut on affiche
 une erreur générique : `Oops, something went wrong`.
 
 Pour que tu découvre qqch dans cette exercices, je te propose d'utiliser `toMatchInlineSnapshot`
