add tests 7 and docs

--- a/src/__tests__/exercices/3.md
+++ b/src/__tests__/exercices/3.md
@@ -11,7 +11,7 @@ va falloir tester pour notre composants :
 3. TODO
 
 Maintenant que tu as réfléchie à ça, je vais te guider sur les tests à écrire et comment
-les faires.
+les faire.
 
 ## Partie 1
 
@@ -86,3 +86,51 @@ En moins si un jour le text par défaut change, on aura qu'à supprimer la valeu
 les tests et le problème sera résolue.
 
 Je t'explique tout ça dans la solution.
+
+## Parti 5
+
+Comme tu l'as vue depuis le début dans le mock de la fonction `onSubmit` on utilise
+une promise qui se résout quasi instanément, ce qui nous empêche de tester si le loader
+est visible ou pas.
+
+Voici un petit snippet très utiles pour tes tests :
+
+```ts
+function deferred() {
+  let resolve: (value: unknown) => void = () => void 0;
+  let reject: (reason?: unknown) => void = () => void 0;
+
+  const promise = new Promise((res, rej) => {
+    resolve = res;
+    reject = rej;
+  });
+  return { promise, resolve, reject };
+}
+```
+
+Il va créer une promise qui se résout quand tu appel la fonction `resolve` et qui
+se reject quand tu appels la fonction `reject`.
+
+Ce qui va te permettre de contrôler l'affichage de notre composant avec des fonctions
+comme celle-ci.
+
+Je te propose de créer un nouveau test ou tu vas utiliser `deferred` dans notre mock
+afin de vérifier si le loader est correctement afficher ou non.
+
+Tu peux l'utiliser comme ça :
+
+```ts
+const { promise, resolve } = deferred();
+const onSubmit = vi.fn(() => promise);
+```
+
+Puis vérifier si le loader est présent :
+
+```ts
+expect(screen.getByTestId('loader')).toBeInTheDocument();
+```
+
+Et enfin résoudre la promise et vérifier que le loader n'est plus présent.
+
+⚠️ Il ne faut pas utiliser `getByTestId` si tu veux récupérer un élément qui n'est _plus_ présent
+dans le DOM.
