--- a/src/__tests__/exercices/7.md
+++ b/src/__tests__/exercices/7.md
@@ -14,4 +14,121 @@ le plus approprier dans tes use-case.
 
 ## Part 1
 
-Le hooks que l'on va tester c'est un
+Le hooks que l'on va tester c'est `useCounter` il retourne 5 éléments :
+
+- `counter` qui représente le compteur
+- `increment` qui va permettre de l'incrémenter
+- `decrement` qui va permettre de le décrémenter
+- `setCounter` afin de définir une valeur précise
+- `reset` qui va redéfinir notre counter avec la initialValue
+
+`initialValue` est le seul argument que prend notre hooks et il définit sa valeur par défaut.
+
+Pour réaliser ce premier test, tu vas créer un composant `TestComponent` ou tu vas utiliser
+le hooks et retourner des boutons pour intéragir avec le hooks, il faudra aussi afficher la
+valeur du hooks.
+
+## Part 2
+
+Au lieu d'utiliser un composant qui affiche des boutons etc... pour intéragir avec notre hooks,
+on va définir notre composant dans notre test et assigné les valeurs de retours
+à une variable avec laquel on va pouvoir intéragir.
+
+```ts
+let counter: UseCounterOutput = null as unknown as UseCounterOutput;
+
+const TestComponent = () => {
+  counter = useCounter();
+
+  return null;
+};
+
+render(<TestComponent />);
+```
+
+(ce code est ajouter directement dans le `test`)
+
+En appelant `counter.setValue` ou `counter.count` tu vas pouvoir intéragir avec le hooks
+directement dans tes tests.
+
+Tu vas aussi pouvoir utiliser `act` pour simuler des intéractions avec le hooks.
+
+```ts
+act(() => {
+  counter.setValue(10);
+});
+```
+
+`act` est utils ici car on va update un state dans un test, `act` viens prévenir et attendre
+que ce changement ce produise et ne créer pas des bugs dans nos tests.
+
+📖 [Quand utiliser act](https://flyingsquirrel.medium.com/when-should-i-use-act-in-react-testing-library-d7dd22a3340e)
+📖 [Bien utiliser act](https://codilime.com/blog/why-should-you-be-grateful-for-act-warnings-in-react-tests/)
+📖 [act react docs](https://reactjs.org/docs/test-utils.html#act)
+
+## Part 3
+
+On veut créer un deuxième test pour vérifier que la `initialValue` est bien définit lors
+du render de notre hooks.
+
+Pour ça il faudrait refaire tout le setup qu'on à fait juste avant. Pour éviter de copier/coller
+notre code on va créer une fonction `setup` qui fait tout ça pour nous.
+
+```ts
+const setup = () => {
+  // Oui, on ment à TypeScript ici !
+  const counter = {} as {
+    current: UseCounterOutput;
+  };
+
+  const TestComponent = () => {
+    counter.current = useCounter();
+
+    return null;
+  };
+
+  render(<TestComponent />);
+
+  return counter;
+};
+```
+
+Une fois ceci fais tu vas pouvoir créer un deuxième test qui va utiliser cette fonction
+pour faire le setup.
+
+```ts
+const counter = setup();
+```
+
+⚠️ Je te laisse customisé ma fonction `setup` pour quel accept `initialValue` en argument !
+
+## Part 4
+
+Bon je vais pas te mentir plus longtemps, il existe un fonction qui permet de faire tout ça
+sans avoir besoin de créer pleins de ligne de code etc...
+
+```ts
+import { renderHook } from '@testing-library/react';
+
+const hook = renderHook(useCounter);
+const counter = hook.result;
+
+expect(counter.current.count).toBe(0);
+```
+
+Voilà une façon simple de vérifier la valeur de notre hooks !
+
+Tu peux supprimer ce qu'on à fait et remplacer les deux tests avec `renderHook`.
+
+Pour ajouter une valeur initial tu peux utiliser [initialProps](https://testing-library.com/docs/react-testing-library/api/#renderhook-options-initialprops).
+
+```ts
+const hook = renderHook(useCounter, { initialProps: 10 });
+```
+
+Ce qui va provoqué le rendu de notre hooks avec `10` comme valeur initial.
+
+En appelant `hook.rerender` hook on va pouvoir modifier la valeur initial cette valeur
+par défaut.
+Dans le test tu peux vérifier que quand on modifie cette valeur avec `hook.rerender` rien n'est
+changé à nos tests.
