--- a/src/__tests__/exercices/1.md
+++ b/src/__tests__/exercices/1.md
@@ -5,7 +5,7 @@ la librairie React-testing-library. C'est un peu plus compliqué, mais ça perme
 comprendre comment l'utilité de cette librairie.
 
 Dans le premier exercice on va tester le composant `Counter` que tu peux retrouver dans
-le dossier [src/components/counter/Counter.tsx](src/components/counter/Counter.tsx).
+le dossier [src/components/counter/Counter.tsx](/src/components/counter/Counter.tsx).
 
 Tu peux tester ce composant avec l'URL http://localhost:5173/1-toggle !
 
@@ -34,29 +34,19 @@ Puis j'utilise ReactDOM afin d'ajouter mon composant dans cette div.
 const div = document.createElement('div');
 document.body.append(div);
 
-const root = ReactDOM.createRoot(div);
-root.render(<Counter />);
+await act(() => {
+  const root = ReactDOM.createRoot(div);
+  root.render(<Counter />);
+});
 ```
+
+Le `act` je t'en parle dans la vidéo solution 😶
 
 A ce stade tu peux tester ce qui se passe dans le dom avec :
 
 ```js
 console.log(div.innerHTML);
 ```
-
-Tu verras qu'il n'y a rien !
-
-Car depuis la dernière mise à jour, React est asyncrone et l'execution de notre code
-**est plus rapide** que l'execution de React.
-
-Pour résoudre ce problème, on va utiliser la fonction `wait` que j'ai créer dans le fichier [src/test/wait.ts](src/test/wait.ts).
-
-```js
-await wait();
-```
-
-Si tu ajoutes cette ligne avant le `console.log` tu verras que le dom est maintenant
-rempli.
 
 Ce que tu dois tester dans cette exercice :
 
@@ -71,7 +61,7 @@ sur le bouton `+`.
 
 C'est presque identifique à notre premier test.
 
-## Partie 3
+## Partie 3
 
 Ce code devient lourd non ? On va faire un petit refactor.
 
@@ -79,19 +69,19 @@ On va créer une fonction `render` qui va nous permettre de créer un composant 
 dom.
 
 ```js
-function render(Component: ReactNode) {
+const render = async (component: ReactNode) => {
   // ...
 
   return div;
-}
+};
 ```
 
-Ainsi qu'une fonction `click` pour simplifé le code et éviter de `wait(1)` partout !
+Ainsi qu'une fonction `click` pour simplifé le code !
 
 ```js
-function click(element: HTMLElement) {
+const click = async (element: HTMLElement) => {
   // ...
-}
+};
 ```
 
 Et on ne vas pas utiliser `element.click` pour faire notre action, on va plutôt
@@ -99,19 +89,19 @@ créer un MouseEvent avec les bons paramètres afin que notre click soit "comm" 
 click fait pas un utilisateur.
 
 ```js
-function click(element: HTMLElement) {
+const click = async (element: HTMLElement) => {
   const event = new MouseEvent('click', {
     bubbles: true,
     cancelable: true,
-    view: window,
   });
 
-  element.dispatchEvent(event);
-  // ...
-}
+  await act(() => {
+    element.dispatchEvent(event);
+  });
+};
 ```
 
-## Partie 4
+## Partie 4
 
 Tu peux voir dans le composant qu'il est possible de passer une props `defaultValue` à notre composant.
 
@@ -133,7 +123,7 @@ valeurs.
 
 Pour ça on va utilisé un `mock` de vite : `vi.fn()`.
 
-Ce hooks va enregistrer les arguments avec lequel il est appelé ainsi que le nombre
+Cette fonction va enregistrer les arguments avec lequel il est appelé ainsi que le nombre
 de fois qu'il est appelé.
 
 Pour vérifier le nombre de fois tu peux faire :
