--- a/src/__tests__/exercices/2.md
+++ b/src/__tests__/exercices/2.md
@@ -13,7 +13,7 @@ Mais on va faire ceci **étape par étape**.
 
 ## Partie 1
 
-Créer le test du clique sur `minus` en utilisant `react-testing-library`.
+Cette fois on va créer un mega test qui test le bouton `plus` et le bouton `minus`.
 
 Ce qui va changé c'est que tu vas utiliser la fonction `render` qui va te retourner `container`, elle correspond à la div qui contient ton composant.
 
@@ -23,22 +23,14 @@ import { render } from 'react-testing-library';
 const { container } = render(<Counter />);
 ```
 
-Avec le `container` tu vas pouvoir effectuer les mêmes appels qu'on à fait
-avant avec `div.querySelector`.
-
 - [📖 `render`](https://testing-library.com/docs/react-testing-library/api#render)
 - [📖 `react-testing-library`](https://testing-library.com/docs/react-testing-library/intro)
 
-## Partie 2
+On va utiliser les fonctions utilitaires de `react-testing-library` pour récupérer nos éléments.
 
-Maintenant, on va utiliser les fonctions utilitaires de `react-testing-library` pour
-récupérer nos éléments.
-
-Afin de récupérer l'élément `plus` on va pouvoir utiliser `screen.getByRole('button', { name: '+' })`.
+Afin de récupérer les boutons on va pouvoir utiliser `screen.getByRole('button', { name: '+' })`.
 
 Et pour récupérer l'élément span de text, on va pouvoir utiliser `screen.getByText('0')`.
-
-Dans la vidéo solution, je vais t'expliquer ce que fais `screen` ainsi que `getByRole`.
 
 - [📖 `getByRole`](https://testing-library.com/docs/queries/byrole)
 - [📖 `getByText`](https://testing-library.com/docs/queries/bytext)
@@ -50,9 +42,9 @@ Tu remarqueras qu'on a aussi accès à de nouvelles assertions offertes par la l
 
 - [`expect(element).toBeInTheDocument()`](https://github.com/testing-library/jest-dom#tobeinthedocument)
 - [`expect(element).toHaveTextContent()`](https://github.com/testing-library/jest-dom#tohavetextcontent)
-- [tous les autres](https://github.com/testing-library/jest-dom#custom-matchers)
+- [toutes les autres](https://github.com/testing-library/jest-dom#custom-matchers)
 
-## Partie 3
+## Partie 2
 
 On est toujours entrain de faire les `click` à la main, mais `react-testing-library` propose
 une librairie génial pour gérer ça pour nous : `user-event`.
@@ -67,7 +59,7 @@ pour correctement implémenter `user-event`.
 
 (tu remarqueras la parties `setup`)
 
-## Partie 4
+## Partie 3
 
 ça risque de pas être super de devoir, à chaque fois, instancié notre `userEvent.setup()`.
 
@@ -88,8 +80,11 @@ function setup(jsx) {
 
 Ajoute cette fonction et refactor le code !
 
-## Partie 5 - BONUS
+## Partie 4 - Bonus pas corrigé
 
-Je te propose d'effectuer **tous** les tests de l'exercice 1 en utilisant `react-testing-library`.
+Tu peux ajouter les deux autres tests fait dans l'exercice 1 utilisant `react-testing-library`.
+
+- Test de l'event onChange
+- Test de la defaultValue
 
 Pas de correction vidéo pour cette partie, c'est juste pour t'entraîner.
