--- a/src/__tests__/exercices/3.md
+++ b/src/__tests__/exercices/3.md
@@ -1,31 +1,22 @@
 # Formulaire d'authentification
 
 Si tu vas sur le composant 2, nommées `Login` tu trouveras un simple formulaire de Login.
-Tu peux aller voir son code dans le fichier [`src/components/login/Login.js`](src/components/login/Login.js).
+Tu peux aller voir son code dans le fichier [`src/components/login/Login.tsx`](/src/components/login/Login.tsx).
 
 Comme d'habitude, avant de commencer je vais te demander d'écrire ici les choses qu'il
 va falloir tester pour notre composants :
 
 1. TODO
 2. TODO
-3. TODO
 
 Maintenant que tu as réfléchie à ça, je vais te guider sur les tests à écrire et comment
 les faire.
 
-## Partie 1
+## Partie 1
 
 La première chose qu'on va tester c'est : si tout se passe parfaitement bien !
 Pour ça il va falloir qu'on remplisse le formulaire et qu'on clique sur le bouton, puis
 qu'on vérifie que le formulaire a été soumis.
-
-Pour remplir les données on va utiliser la librairie [fakerjs](https://fakerjs.dev/guide/)
-qui va nous permettre de générer des données aléatoires.
-
-Effectivement, on va éviter d'écrire des données en dur dans nos tests, car on peut
-sans faire exprès écrire des données qui sont trouver exprès pour fonctionner.
-
-Avec des données aléatoire, tu ne peux pas tricher.
 
 Ensuite il va falloir "écrire" à l'intérieur de nos inputs. Pour ça tu vas utiliser
 [`userEvent.type`](https://testing-library.com/docs/ecosystem-user-event/#typeelement-text-options)
@@ -34,103 +25,24 @@ qui te permet d'écrire dans un input.
 Concernant le click et la vérification que `onSubmit` a été appelé, tu peux te référer
 au test du composant 2.
 
-## Partie 2
+## Partie 2
 
-Ajoute un test qui vérifie que lorsqu'on remplie pas bien le formulaire, on a une erreur
-qui s'affiche.
+Pour remplir les données, tu as définit toi même des données. Le problème c'est qu'en faisant ça tu peux avoir un biais et mettre précisement les données qui font que tes tests passent !
 
-On ne vas plus utiliser fake ici, tu vas ajouter tes propres données qui sont exprès éronné.
+Pour éviter ceci, on va utiliser des données aléatoires. [fakerjs](https://fakerjs.dev/guide/) nous permet de générer des usernames, passwords de manière aléatoire.
 
-Cette erreur sera affiché sur `username` fait moins de 3 caractères.
+Avec des données aléatoire, tu ne peux pas tricher.
+
+Utilise faker pour générer des données aléatoires et remplir les inputs.
 
 ## Partie 3
 
-J'ai utilisé un pattern intéressant pour cette fonction `onSubmit` passé en paramètre.
+Le component prends en paramètre un boolean `isSubmitting` qui permet de désactiver le bouton de soumission du formulaire ainsi que les inputs.
 
-En utilisant la puissance des promises, je peux faire en sorte que le composant Parent
-à mon `onSubmit` puisse renvoyer des erreurs qui seront affiché à l'intérieur du composant.
+Il va aussi affiché un loader.
 
-Tu peux utiliser notre mock pour reject la promise, et vérifier que l'erreur envoyé est bien
-affiché dans le composant.
+Ta mission c'est de tester que quand `isSubmitting` est à `true` le bouton est désactivé et que le loader est affiché.
 
-## Partie 4
+Et ensuite tu vas pouvoir utiliser la méthode `rerender` pour désactiver `isSubmitting` et vérifier que le bouton est de nouveau actif et que le loader n'est plus affiché.
 
-Notre test commence à être très long non ?
-
-Je te propre de créer une fonction qui va gérer la majorités du setup de notre test :
-
-- render le composant
-- remplir les inputs
-- cliquer sur le bouton
-
-Cette fonction devra prendre le `onSubmit` mock en paramètre ainsi que le `username` afin
-de gérer les cas d'erreur.
-
-Si il y a un username, utilise le sinon tu peux utiliser faker.
-
-Refactor chaque test en utilisant notre fonction.
-
-Ensuite créer un 4 ème test qui va vérifier que si notre promise est reject mais que
-elle n’envoie pas un objet `{ message: "Some string" }` alors par défaut on affiche
-une erreur générique : `Oops, something went wrong`.
-
-Pour que tu découvre qqch dans cette exercices, je te propose d'utiliser `toMatchInlineSnapshot`
-dans notre test.
-
-```ts
-expect(errorSpan.textContent).toMatchInlineSnapshot();
-```
-
-Cette inline snapshot va générer automatiquement le text qui est dans notre expect.
-En moins si un jour le text par défaut change, on aura qu'à supprimer la valeur qui est dedans, lancer
-les tests et le problème sera résolue.
-
-Je t'explique tout ça dans la solution.
-
-## Parti 5
-
-Comme tu l'as vue depuis le début dans le mock de la fonction `onSubmit` on utilise
-une promise qui se résout quasi instanément, ce qui nous empêche de tester si le loader
-est visible ou pas.
-
-Voici un petit snippet très utiles pour tes tests :
-
-```ts
-function deferred() {
-  let resolve: (value: unknown) => void = () => void 0;
-  let reject: (reason?: unknown) => void = () => void 0;
-
-  const promise = new Promise((res, rej) => {
-    resolve = res;
-    reject = rej;
-  });
-  return { promise, resolve, reject };
-}
-```
-
-Il va créer une promise qui se résout quand tu appel la fonction `resolve` et qui
-se reject quand tu appels la fonction `reject`.
-
-Ce qui va te permettre de contrôler l'affichage de notre composant avec des fonctions
-comme celle-ci.
-
-Je te propose de créer un nouveau test ou tu vas utiliser `deferred` dans notre mock
-afin de vérifier si le loader est correctement afficher ou non.
-
-Tu peux l'utiliser comme ça :
-
-```ts
-const { promise, resolve } = deferred();
-const onSubmit = vi.fn(() => promise);
-```
-
-Puis vérifier si le loader est présent :
-
-```ts
-expect(screen.getByTestId('loader')).toBeInTheDocument();
-```
-
-Et enfin résoudre la promise et vérifier que le loader n'est plus présent.
-
-⚠️ Il ne faut pas utiliser `getByTestId` si tu veux récupérer un élément qui n'est _plus_ présent
-dans le DOM.
+- [📖 Rerender react-testing-librairie](https://testing-library.com/docs/react-testing-library/api/#rerender)
