--- a/src/__tests__/exercices/4.md
+++ b/src/__tests__/exercices/4.md
@@ -8,7 +8,8 @@ Il est important de pouvoir eux aussi les testser :
 - Que se passe-t-il si l'API à une erreur ?
 - Que se passe-t-il si l'API est lente ?
 
-Pour ça il vas falloir mock les URL que l'on utilise.
+Pour ça il vas falloir créer un faux server de mock qui va intercepter les requêtes
+et nous permettre de définir le comportement de l'API.
 
 Avant de commencer, rend toi dans le fichier [Auth.tsx](/src/components/auth/Auth.tsx) et analyse
 le code afin de trouver les éléments qu'on va devoir tester :
@@ -20,40 +21,47 @@ C'est partie pour notre premier test !
 
 ## Partie 1
 
-Afin de mock les URL, on va utiliser la librairie très simpliste : [fetch-mock](https://github.com/IanVS/vitest-fetch-mock#readme).
-
-Il y a plusieurs librairie pour mock. Dans des gros projets, la librairie préféré est :
-
-- [msw](https://mswjs.io/).
+Afin de mock les URL, on va utiliser la librairie la plus connue : [msw](https://mswjs.io/).
 
 Elle va te permettre de définir des mock pour toutes les URL que tu veux, comme une sorte
 de mini faux backend. Tu peux même utiliser msw durant le dev afin de coder ton frontend sans
 aucune DB.
 
-Mais ici concentrons sur `vitest-fetch-mock` qui est la librairie de mock la plus simple
-pour les tests.
+Pour setup `msw`, j'ai déjà fais ceci :
 
-Pour l'utiliser tu peux mettre dans ton test, on dans un `beforeEach` :
+- Créer le fichier [/src/test/server.ts](/src/test/server.ts) qui "créer" un server de mock
+- Créer un fichier [/src/test/handlers.ts](/src/test/handlers.ts) qui définit des routes
+- Update le fichier [/src/test/vitest.setup.ts](/src/test/vitest.setup.ts) qui va activer le server de mock et le reset entre chaque test
 
-```js
-import fetchMock from 'vitest-fetch-mock';
+Ce que tu vas faire toi, c'est que dans ton test tu peux ajouter à la volé un handler !
 
-beforeEach(() => {
-  fetchMock.mockIf('https://api.example.com', (req) => ({
-    status: 200,
-    body: { message: 'ok' },
-  }));
+```ts
+beforeAll(() => {
+  server.use(
+    rest.post('https://api.server.com/auth/login', async (req, res, ctx) => {
+      const body = await req.json();
+
+      return res(
+        ctx.json({
+          username: body.username,
+          email: faker.internet.email(),
+          id: faker.datatype.number(),
+        })
+      );
+    })
+  );
 });
 ```
+
+Le `beforeAll` va s'exécuter une fois avant tous les tests du fichier et va ajouter un handler
+à notre server de mock.
 
 Il prend en premier paramètre l'URL à mock, et en second un callback qui va définir le
 comportement de l'URL.
 
-Ici on va tous simplement catch l'url `https://api.example.com` et lui dire de retourner
-un status 200 et un body avec un message.
+Ici on va catch l'url `https://api.server.com/auth/login` et répondre avec un body. Pour répondre on utilise `res` en passant un context en paramètre.
 
-Si tu vois dans le composant `Auth` on à un state `isLoading`, afin de mieux simuler ce state
-on peut rajouter un `delay` dans le mock :
+Notre composant `Auth` possède un `Loader`, si on veut avoir une chance de pouvoir le tester, on peut ajouter un mini delay dans notre handler :
 
 ```js
 import fetchMock from 'vitest-fetch-mock';
@@ -69,15 +77,13 @@ beforeEach(() => {
 });
 ```
 
-Pour ton exercice, tu n'as qu'à regarder l'url utilisé, le résultat attendu, et en faire un mock.
-
 Un autre élément intéressant c'est le fait "d'attendre avant qu'un élément soit enlever du dom" :
 
 ```ts
 await waitForElementToBeRemoved(() => screen.getByTestId('loader'));
 ```
 
-Ceci va tout simplement attendre que l'élément soit enlever du dom avant de passer au reste.
+Ceci va attendre que l'élément soit enlever du dom avant de passer au reste.
 
 Toi tu veux utiliser cette fonction afin d'attendre que le loader soit enlever du dom avant
 de vérifier que le user est bien présent.
@@ -86,44 +92,28 @@ C'est à toi de jouer !
 
 ## Partie 2
 
-Maintenant on va tester les différents erreurs possibles.
+On va ajouter un deuxième test qui envoie comme username `invalid_username` ce qui va provoquer une 400 avec un json qui contient un message d'erreur : "Invalid data".
 
-Tu vas pouvoir retourner un status `400` de notre mock avec un message d'erreur, puis
-vérifier que l'erreur est bien affiché.
+Pour ça, il va falloir que tu ajoutes une condition dans notre handler dans le cas ou username est égal à `invalid_username`.
 
-Et deuxième cas : tu vas envoyer une mauvaise réponse dans le body, et vérifier que notre
-front considère ça comme une erreur.
-Dans Auth j'utilise zod pour vérifier que les données reçus ont les bons types.
+Tu vas aussi pouvoir ajouter une variables globals nommé `invalidDataError` qui contient le message d'erreur.
 
-Tu vas donc pouvoir tester que si on reçoit un body qui n'est pas conforme à ce que l'on
-attend, on affiche une erreur.
+Par la suite dans les tests tu vas pouvoir utiliser ce message d'erreur afin de vérifier que
+le message d'erreur est bien affiché.
 
-## Information
+Pour cette parties, je te conseille aussi de refactor toute la partie :
 
-Tu remarquera un warning très relou, que tu retrouveras très souvent avec React.
+- setup
+- récupération des inputs
+- écrire dans le input
+- cliquer sur submit
 
-```
-Warning: An update to Login inside a test was not wrapped in act(...).
+Dans une fonction en dehors pour éviter de répéter le code dans nos deux tests.
 
-When testing, code that causes React state updates should be wrapped into act(...):
+## Part 3
 
-act(() => {
-  /* fire events that update state */
-});
-/* assert on the output */
+Un dernier test est à faire, c'est dans le cas ou notre backend renvoie un JSON sans la valeur `message` lors d'une erreur.
 
-This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
-```
+Dans ce cas on affiche une erreur par défaut !
 
-Ce warning est là pour te dire qu'on est en train d'update un state sans utiliser `act`.
-
-`act` est sûrement une des choses les plus perturbantes au début, mais il va juste
-"laisser le temps" à React de faire ses mise à jour.
-
-Ici on a un problème : notre mise à jour est asyncrone. Effectivement, le `fetch` va attendre
-10 millisecondes avant de retourner un résultat.
-
-On ne peut mettre de `act` null part et je n'ai pas réussi à résoudre ce warning, même
-en ayant mis des `act` partout.
-
-Si toi tu trouves une solution, partage la moi et je modifierais cette section.
+Tu vas pouvoir récupérer notre alert et vérifier avec `toMatchInlineSnapshot` que le text correspond bien !
