--- a/src/__tests__/exercices/5.md
+++ b/src/__tests__/exercices/5.md
@@ -16,7 +16,7 @@ Dans cette exercice on va mock un objet global et tu verras, vite nous simplifie
 
 ## Part 1
 
-On va tester le composant [`<Geolocation>`](./src/components/geolocation/Geolocation.js) qui affiche la position de l'utilisateur.
+On va tester le composant [`<Geolocation>`](/src/components/geolocation/Geolocation.tsx) qui affiche la position de l'utilisateur.
 Pour ça il va falloir mock l'objet `navigator.geolocation` afin de pouvoir tester le composant.
 
 Tu verras que `vite` nous propose de réaliser ce mock en utilisant `vi.stubGlobal()`.
@@ -42,10 +42,10 @@ un boolean qui va définir si oui ou non l'utilisateur à accepté de partager s
 Dans ou il n'accepte pas on va appelé le callback d'erreur !
 
 Aussi, afin de résoudre des bugs entre nos tests, on va utiliser le code suivant à
-l'intérieur de notre describe afin de déstub tous les objets globaux.
+l'intérieur de notre describe afin de supprimer tous les mock après chaque test.
 
 ```ts
 afterEach(() => {
-  vi.unstubAllGlobals();
+  mockLocation();
 });
 ```
