--- a/src/__tests__/exercices/6.md
+++ b/src/__tests__/exercices/6.md
@@ -32,7 +32,7 @@ const Wrapper = (props: PropsWithChildren) => {
 };
 
 const customRender = (ui: ReactElement, options?: any /* à toi de le mettre */) =>
-  render(ui, { wrapper: Wrapper, ...options });
+  setup(ui, { wrapper: Wrapper, ...options });
 ```
 
 Tu pourrais vouloir déplacer cette fonction dans un fichier utilitaire nommé `renderApp`
@@ -44,12 +44,12 @@ import { render } from '@testing-library/react';
 const Wrapper = () => /*...*/
 
 export const renderApp = (ui: ReactElement, options?: any /* à toi de le mettre */) => {
-  return render(ui, { wrapper: Wrapper, ...options });
+  return setup(ui, { wrapper: Wrapper, ...options });
 }
 ```
 
 Tu vas pouvoir ensuite utiliser cette méthode partout ou tu as besoin de `render` ton
-application entièrement.
+application avec les contexts.
 
 Dans cette exercices on va testé le composant `Dashboard`. Je m'excuse d'avance car ce
 composant est pas très concret, au contraire, il est très abstrait car pas très utiles !
@@ -61,32 +61,19 @@ On verras aussi dans cette exercises, commenter tester le context en lui même.
 ## Part 1
 
 Il va falloir que tu créer une fonction `customRender` qui wrap notre composant avec le
-`UserContextProvider` ainsi que le `ThemeContextProvider`. Tu vas ensuite pouvoir tester
-de te logger et déconnecté ainsi que toggle le dark mode.
+`UserContextProvider` ainsi que le `ThemeContextProvider`.
 
-Attention, ici pour ce concentrer sur la notion de `wrapper` je n'ai pas ajouté d'autre chose,
-mais tu pourrais utiliser un wrapper tout simplement pour faire fonctionner ton app.
+Tu peux créer le test suivant :
 
-Si tu utilises `useUser` en dehors du `UserContextProvider` ça va throw une erreur, donc
-il est impossible de tester le composant sans le wrapper.
-
-Tu peux créer deux test :
-
-- Vérifier que dès qu'on se login on affiche le user name
 - Vérifier que dès qu'on toggle le dark mode, le mode est correctement changer
 
-## Part 2
+## Part 2
 
-Parfois on aura besoin de `mock` nos providers afin de leur ajouté des valeurs par défaut,
-par exemple le fait d'être connecté ou pas.
+Il est possible de "mock" nos providers, quand ceux-ci prennes des valeurs par défaut.
 
-Pour ça on peut utiliser un petit tricky, en passant une props à nos provider.
+Dans un autre `describe`, on va tester un deuxième component, dans le même fichier : `DashboardHeader`. Il faut tester le cas ou il n'y a pas de user et le cas ou il y en as un.
 
-Dans `UserContextProvider` tu verras qu'il prend en props `defaultUser`. Tu peux utiliser
-cette props afin de définir le default user et donc pouvoir créer un 3ème test qui vérifie
-qu'on peut se déconnecté avec le bouton `logout`.
-
-Pour ajouter une valeur une valeur par défaut à notre `customRender` on peut utiliser :
+Pour ça, tu peux suivre ce pattern :
 
 ```tsx
 const Wrapper = ({ children, test }: PropsWithChildren<{ test?: string }>) => {
@@ -107,9 +94,11 @@ const customRender = (
   });
 ```
 
-A toi d'intégrer ceci dans notre test.
+A toi de créer les deux tests nécessaires pour notre `DashboardHeader`.
 
-## Part 3
+- 💌 Notre wrapper peut être utiliser pour tous les composants qui ont besoin de ce context
+
+## Part 3
 
 Comment on aurais pus tester un Provider ? Par exemple le ThemeProvider ?
 
@@ -126,7 +115,7 @@ const TestComponent = () => {
   );
 };
 
-test('test theme', () => {
+test('toggle theme will change the theme color', () => {
   // on va ici utiliser notre customRender pour tester le theme uniquement
 });
 ```
@@ -134,4 +123,4 @@ test('test theme', () => {
 Le but est de créer un composant qui va nous permettre uniquement de vérifier que les données
 change quand on appel la fonction Toggle par exemple.
 
-Essai de créer ce test et regarde la vidéo solution si tu ne vois pas comment faire.
+Essaie de créer un composants `TestComponent` tout simple, qui affiche juste le text `light` ou `dark` de theme et créer le test qui permet de toggle.
